--- a/projects/busreservationsystem/package.json
+++ b/projects/busreservationsystem/package.json
@@ -8,18 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
-    "vue-router": "^4.0.15"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-template-compiler": "^2.6.14"
   },
@@ -30,7 +36,7 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "@vue/standard"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
